--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -12,7 +12,7 @@ zip_keys:                      # [(linux and x86_64)]
     - cuda_compiler_version    # [(linux and x86_64)]
 
 skip_cuda_pbp:
-  - true
+  - false
 
 OSX_SDK_VER:               # [osx]
   - 12.3                   # [osx]
