--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -59,7 +59,7 @@ build:
   skip: true  # [python_impl == 'pypy']
   # https://www.tensorflow.org/install/source#tested_build_configurations
   skip: true  # [py<310 or py>313]
-  skip: true  # [skip_cuda_pbp and (gpu_variant or "").startswith('cuda')]
+  skip: true  # [not (gpu_variant or "").startswith('cuda')]
   # TODO re-enable windows once PBP can handle symlinks again. 
   skip: true  # [win]
 
